- Actualizada la paleta de colores de la aplicación - Implementada la carga de tipografías personalizadas (Comfortaa y Roboto) - Añadidos botones de Editar y Eliminar en la vista de detalle de socio - Creada pantalla de formulario para creación y edición de socios - Mejorada la gestión de estados en ViewModels (Loading, Success, Error, Exception) - Implementados componentes de pantalla para Loading y Exception - Añadida validación de teléfono en InputViewModel - Integrada la librería FileKit para selección de imágenes de avatar - Refactorizada la pantalla de Login para una apariencia más limpia - Corregido el manejo de excepciones en AuthViewModel y UsuariosViewModel - Actualizada la configuración del cliente Ktor para usar el token de sesión - Ajustes en la navegación y paso de ViewModels - Creado componente de diálogo de confirmación reutilizable - Creado componente para seleccionar categoría de socio mediante botones segmentados

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ ktor = "3.1.2"
 ktorfit = "2.5.2"
 uiBackhandler = "1.8.1"
 coil = "3.2.0"
+filekit = "0.10.0-beta04"
 
 [libraries]
 adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "adaptive" }
@@ -42,6 +43,11 @@ androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayo
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
+
+filekit-core = { module = "io.github.vinceglb:filekit-core", version.ref = "filekit" }
+filekit-dialogs = { module = "io.github.vinceglb:filekit-dialogs", version.ref = "filekit" }
+filekit-dialogs-compose = { module = "io.github.vinceglb:filekit-dialogs-compose", version.ref = "filekit" }
+
 
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
