- Mejorada la gestión de avatares:     - Renombrado `UsuarioAvatar` a `PerfilAvatar` y añadido parámetro `esUri`.     - Integrado `PerfilAvatar` en `SociosScreen` y `UsuariosScreen`. - Actualizado `FormularioScreen`:     - Mejorada la selección de avatar con `FileKit`.     - Añadidos campos para fechas de nacimiento y antigüedad con selector de fecha.     - Implementada selección de `Rol` y `Categoria` con `SeleccionButtonRow`.     - Activada la barra de desplazamiento vertical. - Actualizado `LoginScreen`:     - Cambiado `enabled` por `readOnly` en el campo de contraseña. - Configurado `ImageLoader` global en `App.kt` con soporte para archivos de plataforma. - Añadida dependencia `filekit-coil`. - Actualizado `InputViewModel`:     - Modificado `avatar` en `UsuarioFormState` para usar `PlatformFile`.     - Añadidos campos `fechaNacimiento` y `fechaAntiguedad` a `SocioFormState`.     - Añadidas funciones para actualizar las nuevas fechas. - Creados nuevos componentes en `CustomInputs.kt`:     - `SeleccionButtonRow` para selección de opciones tipo `Enum`.     - `MiTextFieldFecha` para campos de fecha con diálogo de selección.     - `SeleccionarFecha` como diálogo privado para selección de fecha. - Actualizado `MiTextField` en `CustomInputs.kt` para usar `readOnly` en lugar de `enabled`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,9 +45,8 @@ androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:life
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 
 filekit-core = { module = "io.github.vinceglb:filekit-core", version.ref = "filekit" }
-filekit-dialogs = { module = "io.github.vinceglb:filekit-dialogs", version.ref = "filekit" }
 filekit-dialogs-compose = { module = "io.github.vinceglb:filekit-dialogs-compose", version.ref = "filekit" }
-
+filekit-coil = { module = "io.github.vinceglb:filekit-coil", version.ref = "filekit" }
 
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
