- Integrada la recuperación de sesión de usuario y la lógica de roles (admin/usuario) - Refactorizados componentes de UI para adaptarse a los roles y mejorar la experiencia de usuario - Añadida internacionalización con soporte para inglés y español - Mejorada la gestión de avatares de usuario y su subida al servidor - Actualizada la lógica de creación y modificación de usuarios y socios - Ajustes en la navegación y la presentación de información en diferentes pantallas - Corregidos errores y mejorada la estabilidad general de la aplicación - Actualizadas dependencias y configuración del proyecto - Añadido logo de la aplicación - Mejorado el sistema de logging en las peticiones de red - Ajustado el tamaño responsive en algunas vistas

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ ktorfit = "2.5.2"
 uiBackhandler = "1.8.1"
 coil = "3.2.0"
 filekit = "0.10.0-beta04"
+hyperether-localization = "1.1.1"
 
 [libraries]
 adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "adaptive" }
@@ -51,6 +52,7 @@ filekit-coil = { module = "io.github.vinceglb:filekit-coil", version.ref = "file
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor"}
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" } # Android
 ktor-client-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" } # Web
 kotlin-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
@@ -74,3 +76,4 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ktorfit = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfit" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize",  version.ref = "kotlin"  }
+hyperether-localization = { id = "com.hyperether.localization", version.ref = "hyperether-localization"}
